Disable scrollbars triggered by tooltips, fixes #190

--- a/src/ng/app.css
+++ b/src/ng/app.css
@@ -28,6 +28,7 @@ html {
 
 body {
     font-size: 1.4em;
+    overflow: hidden;
 }
 
 a {
